# undergrid

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/agent/: Cargo.toml
crates/agent/src/: config.rs  defines.rs  discovery.rs  lib.rs  main.rs  state.rs  system.rs
crates/agent/src/client/: client.rs  client_error.rs  client_pool.rs  mod.rs
crates/agent/src/config/: config.rs  config_error.rs  mod.rs
crates/agent/src/node/: discovery.rs  mod.rs  runner.rs  state.rs
crates/agent/src/orchestrator/: mod.rs  orchestrator_error.rs
crates/agent/src/server/: mod.rs  node_agent.rs
crates/agent/src/system/: conversions.rs  mod.rs  system.rs  system_error.rs
crates/agent/tests/: test_client.rs  test_integration.rs  test_orchestrator.rs
crates/cli/: Cargo.toml
crates/cli/src/: job.rs  main.rs
crates/mesh/: Cargo.toml  build.rs
crates/mesh/src/: lib.rs
crates/mesh/src/conversions/: job.rs  mod.rs  tasks.rs
crates/raft/: Cargo.toml
crates/raft/src/: lib.rs
crates/raft/tests/: raft.rs  test_raft.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/runtime/src/executor/: executor_error.rs  mod.rs
crates/runtime/src/job/: job_error.rs  mod.rs
crates/runtime/src/task/: mod.rs  task_error.rs
crates/runtime/src/types/: job.rs
crates/runtime/tests/: test_executor.rs  test_job.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs  scheduler_error.rs
crates/scheduler/src/drf/: mod.rs
crates/scheduler/tests/: drf_scheduler_test.rs
proto/: undergrid.proto
