[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
gethostname = "1.1.0"
mdns-sd = "0.18.2"
mesh = { version = "0.1.0", path = "../mesh" }
nix = { version = "0.31.2", features = ["fs"] }
prost = "0.14.3"
raft = { version = "0.1.0", path = "../raft" }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "time", "signal"] }
toml = "1.1.0"
tonic = "0.14.5"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.0", features = ["v4"] }

[dev-dependencies]
tonic-reflection = "0.14.5"
