[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
mesh = { version = "0.1.0", path = "../mesh" }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.51.1", features = ["full"] }
toml = "1.1.2"
tonic = "0.14.5"
